--- a/Video_from_Frames.ipynb
+++ b/Video_from_Frames.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f:\\A\\Gits\\python_music_visualizer\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,21 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "images_folder = 'images'\n",
     "image_paths_ordered = []\n",
+    "if not os.path.exists(images_folder):\n",
+    "    os.makedirs(images_folder)\n",
     "\n",
-    "for i in range(1, len(glob.glob(f'{images_folder}/*.png'))):\n",
-    "    filename = os.path.join(images_folder, f\"img_{i}.png\")\n",
-    "    image_paths_ordered.append(filename)\n",
+    "# Check if there are any image files in the folder\n",
+    "if len(glob.glob(f'{images_folder}/*.png')) > 0:\n",
+    "    for i in range(1, len(glob.glob(f'{images_folder}/*.png')) + 1):\n",
+    "        filename = os.path.join(images_folder, f\"img_{i}.png\")\n",
+    "        image_paths_ordered.append(filename)\n",
     "\n",
-    "frames = len(image_paths_ordered)\n",
-    "fps = frames / seconds\n",
-    "frame = cv2.imread(image_paths_ordered[0])\n",
-    "height, width, layers = frame.shape"
+    "    frames = len(image_paths_ordered)\n",
+    "    fps = frames / seconds\n",
+    "    frame = cv2.imread(image_paths_ordered[0])\n",
+    "    height, width, layers = frame.shape\n"
    ]
   },
   {
@@ -72,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
